--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -93,6 +93,14 @@
             </nav>
         </div>
     </div>
+    <div class="d-flex justify-content-end mt-4">
+        <form action="/logout" method="post" class="d-inline">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <button type="submit" class="btn btn-outline-danger btn-sm">
+                <i class="bi bi-box-arrow-right"></i> Logout
+            </button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
